--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 on:
   push:
     branches: 
-      - master
+      - andre_test_release
 jobs:
   release:
     name: Release
@@ -19,7 +19,7 @@ jobs:
       - name: Release
         run: yarn semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.release_bot_github_token}}
+          GITHUB_TOKEN: ${{ secrets.release_bot_github_token }}
           GIT_AUTHOR_NAME: ${{ secrets.release_bot_git_name }}
           GIT_AUTHOR_EMAIL: ${{ secrets.release_bot_git_email }}
           GIT_COMMITTER_NAME: ${{ secrets.release_bot_git_name }}
