--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,6 @@
 {
     "branches": [
-        "master"
+        "andre_test_release"
     ],
     "plugins": [
         "@semantic-release/commit-analyzer",
@@ -9,10 +9,8 @@
         ["@semantic-release/exec", {
             "prepareCmd": "./bin/update-manifest-version.sh ${nextRelease.version}"
         }],
-        ["@semantic-release/git", {
-            "assets": ["manifest.json", "CHANGELOG.md"],
-            "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
+        ["@semantic-release/exec", {
+            "prepareCmd": "git push https://x-access-token:$GITHUB_TOKEN@github.com/zendesk/copenhagen_theme.git HEAD:andre_test_release"
         }],
-        "@semantic-release/github"
     ]
 }
